fix: list item head z-index 1 to prevent awesomplete being hidden

--- a/frappe/public/scss/desk/list.scss
+++ b/frappe/public/scss/desk/list.scss
@@ -278,7 +278,7 @@ input.list-check-all {
 .modal-body {
 	.list-item--head {
 		position: sticky !important;
-		z-index: 500;
+		z-index: 1;
 		top: 0;
 	}
 
